# arithmetic-workspace

./: Cargo.toml  README.md
client_libraries/file_monitor/: Cargo.toml
client_libraries/file_monitor/src/: lib.rs
server_libraries/add/: Cargo.toml
server_libraries/add/src/: lib.rs
server_libraries/divide/: Cargo.toml
server_libraries/divide/src/: lib.rs
server_libraries/multiply/: Cargo.toml
server_libraries/multiply/src/: lib.rs
server_libraries/subtract/: Cargo.toml
server_libraries/subtract/src/: lib.rs
